# fastapi-react

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 86169c575567_create_user_table.py
src/: api.py  cli.py  config.py  constants.py  main.py  models.py  schemas.py
src/auth/: models.py  routes.py  schemas.py  services.py
src/database/: core.py  manage.py  utils.py
web/: package-lock.json  package.json
web/src/: App.tsx
web/src/api/: client.ts  schema.d.ts
web/src/components/: AuthDemo.tsx  LoginForm.tsx  RegisterForm.tsx
web/src/contexts/: AuthContext.tsx
